--- a/home.css
+++ b/home.css
@@ -1,13 +1,40 @@
-.creditsLogo {
-    height: 60px;
+.creditImage {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+}
+
+@media only screen and (min-width: 960px) {
+    .creditContainer {
+        padding: 0px;
+    }
+  }
+
+.creditContainer {
+    margin: auto;
+    height: 90px;
+    width: 90px;
+}
+
+.creditsRow {
+    width: 90%;
+    margin: auto;
+}
+
+.homeLogoContainingDiv {
+    width: 75%;
+    margin: auto;
 }
 
 .homeLogo {
-    height: 50%;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #skippyskip {
+    border: 3px solid red;
 }
 
 a {
