--- a/home.css
+++ b/home.css
@@ -1,3 +1,22 @@
+body {
+    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+
+.twitter-timeline {
+    width: 100%;
+}
+
+.twitterContainer {
+    height: 400px;
+    overflow: auto;
+    float: left;
+}
+.introDescription {
+    height: 500px;
+    float: right;
+}
+
 .creditImage {
     width: 100%;
     height: 100%;
@@ -21,6 +40,7 @@
     float: left;
     height: 100%;
 }
+
 .headerLogoImage {
     height: 100%;
 }
@@ -29,11 +49,11 @@
     padding-top: 55px;
 }
 
-@media only screen and (min-width: 960px) {
+/* @media only screen and (min-width: 960px) {
     .creditContainer {
         padding: 0px;
     }
-  }
+  } */
 
 .creditContainer {
     margin: auto;
