--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,3 @@
-body {
-    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-
 .twitter-timeline {
     width: 100%;
 }
@@ -23,14 +18,96 @@ body {
     object-fit: scale-down;
 }
 
-.headerBar {
+@media only screen and (max-width: 767px) {
+    .navigationSection {
+        width: 100%;
+        height: 100%;
+    }
+    nav {
+        width: 100%;
+        height: 100%;
+        padding-top: 75px;
+        background-color: black;
+    }
+    table {
+        width: 100%;
+    }
+    th {
+        margin: auto;
+        float: left;
+    }
+    .skipItem {
+        font-size: 22px;
+        float: left;
+        color: #0d75ac;
+    }
+  }
+
+.navigationSection {
+    top: 0px;
+    right: 0px;
+    position: fixed;
+    z-index: 10;
+    overflow-y: auto;
+}
+
+#iconForSkip {
+    padding-right: 50px;
+    padding-top: 50px;
+
+    font-size: 50px;
+    color: #0d75ac;
+    float: right;
+}
+#iconForSkip:hover {
+    color: #4fb4e4;
+}
+#contentOfSkip {
+    display: none;
+}
+#contentOfSkip.visible {
+    display: block;
+}
+
+.skipItem {
+    font-size: 22px;
+    float: right;
+    color: #0d75ac;
+}
+
+.skipItem:hover {
+    color: #0d75ac;
+}
+
+th {
+    padding: 15px;
+    background-color: black;
+}
+
+th:hover {
+    background-color: #bac8de;
+}
+
+table {
+    padding-right: 50px;
+}
+
+
+.topLeftLogo {
+    height: 55px;
+    top: 10px;
+    left: 10px;
+    position: fixed;
+    z-index: 10;
+}
+
+/* .headerBar {
     height: 55px;
     width: 100%;
-    position: fixed;
     top: 0px;
     border: 3px solid black;
     background-color: white;
-}
+} */
 
 .skippyskip {
     float: right;
@@ -69,6 +146,8 @@ body {
 .homeLogoContainingDiv {
     width: 75%;
     margin: auto;
+    padding-top: 12%;
+    padding-bottom: 15%;
 }
 
 .homeLogo {
@@ -79,11 +158,11 @@ body {
 }
 
 a {
-    color: green;
+    color: #4fb4e4;
 }
 
 a:hover {
-    color: lightseagreen;
+    color: #0d75ac;
 }
 
 .navy {
