attempt at a nav bar

--- a/css/home.css
+++ b/css/home.css
@@ -18,37 +18,61 @@
     object-fit: scale-down;
 }
 
-@media only screen and (max-width: 767px) {
-    .navigationSection {
-        width: 100%;
-        height: 100%;
-    }
-    nav {
-        width: 100%;
-        height: 100%;
-        padding-top: 75px;
-        background-color: black;
-    }
-    table {
-        width: 100%;
-    }
-    th {
-        margin: auto;
-        float: left;
-    }
-    .skipItem {
-        font-size: 22px;
-        float: left;
-        color: #0d75ac;
-    }
-  }
-
 .navigationSection {
     top: 0px;
     right: 0px;
     position: fixed;
     z-index: 10;
-    overflow-y: auto;
+}
+
+nav {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+table {
+    padding-right: 230px;
+    display: block;
+    overflow: auto;
+    padding-bottom: 65px;
+    position: fixed;
+    right: 0px;
+    height: 100%;
+    width: 210px;
+}
+.tbody {
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+th {
+    margin: auto;
+    width: 9999px;
+    float: center;
+}
+.row {
+    display: block;
+}
+
+.colContainsIcon 
+{
+    float: right;
+}
+.colContainsContent {
+    float: left;
+    padding-top: 110px;
+}
+.containsTable {
+    height: 100%;
+    width: 100%;
 }
 
 #iconForSkip {
@@ -64,6 +88,7 @@
 }
 #contentOfSkip {
     display: none;
+    position: fixed;
 }
 #contentOfSkip.visible {
     display: block;
@@ -71,7 +96,6 @@
 
 .skipItem {
     font-size: 22px;
-    float: right;
     color: #0d75ac;
 }
 
@@ -80,16 +104,13 @@
 }
 
 th {
+    text-align: right;
     padding: 15px;
     background-color: black;
 }
 
 th:hover {
     background-color: #bac8de;
-}
-
-table {
-    padding-right: 50px;
 }
 
 
@@ -100,14 +121,6 @@ table {
     position: fixed;
     z-index: 10;
 }
-
-/* .headerBar {
-    height: 55px;
-    width: 100%;
-    top: 0px;
-    border: 3px solid black;
-    background-color: white;
-} */
 
 .skippyskip {
     float: right;
@@ -125,6 +138,36 @@ table {
 .notHeader {
     padding-top: 55px;
 }
+
+@media only screen and (max-width: 767px) {
+    .navigationSection {
+        left: 0px;
+        width: 100%;
+        height: 100%;
+    }
+    nav {
+        padding: 70px 20px;
+    }
+    .colContainsContent {
+        padding-top: 0px;
+    }
+    
+    #contentOfSkip{
+        left: 15px;
+        width: 70%;
+    }
+    #iconForSkip {
+        padding-top: 0px;
+    }
+    th {
+        padding-left: 100px;
+        text-align: center!important;
+    }
+    table {
+        padding-right: 50px;
+        width: 100%;
+    }
+  }
 
 /* @media only screen and (min-width: 960px) {
     .creditContainer {
@@ -219,11 +262,4 @@ a:hover {
     border: 15px solid lightgrey;
     padding: 50px;
     margin: 20px;
-}
-  
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
 }
