--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,13 @@
+body {
+    width: 100%;
+    height: auto;
+}
+
+html {
+    width: 100%;
+    height: auto;
+}
+
 .twitter-timeline {
     width: 100%;
 }
@@ -25,12 +35,6 @@
     z-index: 10;
 }
 
-nav {
-    width: 100%;
-    height: 100%;
-    background-color: black;
-}
-
 .row:after {
     content: "";
     display: table;
@@ -38,14 +42,14 @@ nav {
 }
 
 table {
-    padding-right: 230px;
+    margin-right: 55px;
     display: block;
     overflow: auto;
-    padding-bottom: 65px;
+    margin-bottom: 65px;
     position: fixed;
     right: 0px;
-    height: 100%;
-    width: 210px;
+    height: 75%;
+    width: 250px;
 }
 .tbody {
     width: 100%;
@@ -68,7 +72,7 @@ th {
 }
 .colContainsContent {
     float: left;
-    padding-top: 110px;
+    padding-top: 125px;
 }
 .containsTable {
     height: 100%;
@@ -76,15 +80,16 @@ th {
 }
 
 #iconForSkip {
-    padding-right: 50px;
-    padding-top: 50px;
+    margin-right: 70px;
+    margin-top: 70px;
 
     font-size: 50px;
     color: #0d75ac;
     float: right;
+    cursor: pointer;
 }
 #iconForSkip:hover {
-    color: #4fb4e4;
+    color: #bac8de;
 }
 #contentOfSkip {
     display: none;
@@ -97,10 +102,15 @@ th {
 .skipItem {
     font-size: 22px;
     color: #0d75ac;
+    margin: 0px;
 }
 
 .skipItem:hover {
     color: #0d75ac;
+}
+
+tr {
+    cursor: pointer;
 }
 
 th {
@@ -140,18 +150,20 @@ th:hover {
 }
 
 @media only screen and (max-width: 767px) {
-    .navigationSection {
+    .navigationSection.menuOn {
         left: 0px;
         width: 100%;
         height: 100%;
     }
-    nav {
+    nav.menuOn {
         padding: 70px 20px;
+        width: 100%;
+        height: 100%;
+        background-color: black;
     }
     .colContainsContent {
         padding-top: 0px;
     }
-    
     #contentOfSkip{
         left: 15px;
         width: 70%;
@@ -159,8 +171,11 @@ th:hover {
     #iconForSkip {
         padding-top: 0px;
     }
+    #iconForSkip.menuOn {
+        margin-top: 0px;
+        margin-right: 50px;
+    }
     th {
-        padding-left: 100px;
         text-align: center!important;
     }
     table {
