--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,7 +4,7 @@ body {
   height: 100%;
   font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
   color: white;
-  background-color: black; }
+  background-color: var(--black); }
 
 /* line 12, /home/dave/software/ktbolt/simvascular.github.io/source/css/grayscale.scss */
 html {
