--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@ html {
     float: left;
 }
 .introDescription {
-    height: 500px;
+    height: 400px;
     float: right;
 }
 
@@ -84,12 +84,12 @@ th {
     margin-top: 70px;
 
     font-size: 50px;
-    color: #0d75ac;
+    color: var(--darkblue);
     float: right;
     cursor: pointer;
 }
 #iconForSkip:hover {
-    color: #bac8de;
+    color: var(--lightbluegrey);
 }
 #contentOfSkip {
     display: none;
@@ -101,12 +101,12 @@ th {
 
 .skipItem {
     font-size: 22px;
-    color: #0d75ac;
+    color: var(--darkblue);
     margin: 0px;
 }
 
 .skipItem:hover {
-    color: #0d75ac;
+    color: var(--darkblue);
 }
 
 tr {
@@ -116,11 +116,11 @@ tr {
 th {
     text-align: right;
     padding: 15px;
-    background-color: black;
+    background-color: var(--black);
 }
 
 th:hover {
-    background-color: #bac8de;
+    background-color: var(--lightbluegrey);
 }
 
 
@@ -159,7 +159,7 @@ th:hover {
         padding: 70px 20px;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: var(--black);
     }
     .colContainsContent {
         padding-top: 0px;
@@ -216,21 +216,21 @@ th:hover {
 }
 
 a {
-    color: #4fb4e4;
+    color: var(--blue);
 }
 
 a:hover {
-    color: #0d75ac;
+    color: var(--darkblue);
 }
 
 .navy {
     padding: 10px;
-    color: grey;
+    color: var(--grey);
     text-decoration: none;
 }
 
 .navy:hover {
-    color: lightgrey;
+    color: var(--lightgrey);
 }
 
 .columnForGuides {
@@ -267,14 +267,35 @@ a:hover {
 }
 
 .twitterBox {
-    border: 15px solid lightblue;
+    border: 15px solid var(--lightblue);
     padding: 50px;
     margin: 20px;
     height: 150px;
 }
 
 .boxybox {
-    border: 15px solid lightgrey;
+    border: 15px solid var(--lightgrey);
     padding: 50px;
     margin: 20px;
+}
+
+.newSection {
+    margin-top: 30px;
+    width: 100%;
+    height: 100px;
+    background-color: var(--verydarkblue);
+    text-align: center;
+    color: var(--black);
+}
+
+@media only screen and (min-width: 960px) {
+    .firstHeader {
+        height: 400px;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+    .firstHeader {
+        height: 800px;
+    }
 }
