--- a/css/home.css
+++ b/css/home.css
@@ -314,7 +314,7 @@ h2 {
     margin-bottom: 15px;
     /* width: 95%; */
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
     background-color: var(--verydarkblue);
     border: 5px solid var(--lighterverydarkblue);
     text-align: center;
@@ -334,9 +334,50 @@ h2 {
     color: var(--black);
 }
 
+.box1, .box2, .box3, .box4 {
+    display: block;
+    float: left;
+    margin-top: 15px;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.box1 {
+    margin-top: 20px;
+}
+
+.box3 {
+    margin-top: 20px;
+}
+/* 
+.box1 {
+    background-color: var(--blue);
+}
+
+.box2 {
+    background-color: var(--lightbluegrey);
+}
+
+.box3 {
+    background-color: var(--lightpink);
+}
+
+.box4 {
+    background-color: var(--red);
+} */
+
+.downloadLinks {
+    padding: 15px;
+    display: block;
+    font-size: 25px;
+}
+
 .newSectionContent {
     display: block;
     float: left;
+    width: 100%;
 }
 
 .copyright {
