--- a/css/home.css
+++ b/css/home.css
@@ -155,7 +155,11 @@ th:hover {
     padding-top: 55px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px){
+    .twitterContainer {
+        /* width: 95%; */
+        /* margin: auto; */
+    }
     .navigationSection.menuOn {
         left: 0px;
         width: 100%;
@@ -671,5 +675,14 @@ h2 {
         text-align: left;
         font-size: 20px;
         padding: 15px;
+    }
+}
+
+.box3 {
+    padding-top: 30px;
+}
+@media only screen and (min-width: 768px) {
+    .box4 {
+        padding-top: 25px;
     }
 }
