header bar, carousel, sections, documentation

--- a/css/standards.css
+++ b/css/standards.css
@@ -1,5 +1,6 @@
 :root {
     --black: #16161D;
+    --otherBackground: #022639;
     --verydarkblue: #033651;
     --lighterverydarkblue: #1c4a62;
     --darkblue: #0d75ac;
