--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,7 @@ html {
 
 .introDescription {
     float: right;
+    margin: auto;
 }
 .navigationSection {
     top: 0px;
@@ -40,7 +41,9 @@ html {
 }
 
 table {
-    margin-right: 55px;
+    z-index: 20;
+    /* margin-right: 55px; */
+    top: 75px;
     display: block;
     overflow: auto;
     margin-bottom: 65px;
@@ -79,14 +82,16 @@ th {
 }
 
 #iconForSkip {
-    margin-right: 70px;
-    margin-top: 70px;
+    padding-top: 0;
+    margin-top: 15px;
+    margin-right: 15px;
 
     font-size: 50px;
     color: var(--darkblue);
     float: right;
     cursor: pointer;
 }
+
 #iconForSkip:hover {
     color: var(--lightbluegrey);
 }
@@ -100,11 +105,11 @@ th {
 
 .skipItem {
     font-size: 22px;
-    color: var(--darkblue);
+    color: var(--lightbluegrey);
     margin: 0px;
 }
 
-.skipItem:hover {
+th:hover .skipItem, .skipItem:hover {
     color: var(--darkblue);
 }
 
@@ -135,6 +140,14 @@ th:hover {
     float: right;
 }
 
+.header {
+    z-index: 20;
+    position: fixed;
+    height: 75px;
+    width: 100%;
+    background-color: var(--black);
+}
+
 .headerLogoContainer {
     float: left;
     height: 100%;
@@ -152,7 +165,7 @@ th:hover {
 }
 
 .notHeader {
-    padding-top: 55px;
+    padding-top: 90px;
 }
 
 @media only screen and (max-width: 767px){
@@ -169,6 +182,7 @@ th:hover {
         padding: 70px 20px;
         width: 100%;
         height: 100%;
+        color: var(--black);
         background-color: var(--black);
     }
     .colContainsContent {
@@ -178,11 +192,7 @@ th:hover {
         left: 15px;
         /* width: 70%; */
     }
-    #iconForSkip {
-        padding-top: 0;
-        margin-top: 15px;
-        margin-right: 15px;
-    }
+    
     #iconForSkip.menuOn {
         margin-top: 15px;
         margin-right: 15px;
@@ -227,8 +237,6 @@ th:hover {
 .homeLogoContainingDiv {
     width: 75%;
     margin: auto;
-    padding-top: 12%;
-    padding-bottom: 15%;
 }
 
 .homeLogo {
@@ -325,24 +333,37 @@ h2 {
     width: 100%;
 }
 
+.everyOtherSection {
+    background-color: var(--otherBackground);
+    height: fit-content;
+    width: 100%;
+    display: block;
+    float: left;
+    padding: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .newSectionHeader {
     display: block;
     float: left;
     /* margin-right: 2.5%;
     margin-left: 2.5%; */
-    margin-top: 30px;
-    margin-bottom: 15px;
+    /* margin-top: 30px; */
+    /* margin-bottom: 15px; */
     /* width: 95%; */
     width: 100%;
     /* height: 100px; */
-    background-color: var(--verydarkblue);
-    border: 5px solid var(--lighterverydarkblue);
+    /* background-color: var(--grey); */
+    /* border: 5px solid var(--lighterverydarkblue); */
     text-align: center;
     color: var(--black);
 }
 
 .headerForGalleryContainer {
     display: block;
+    width: 100%;
+    float:left;
     /* float: left; */
     margin-top: 15px;
     /* width: fit-content; */
@@ -351,10 +372,10 @@ h2 {
     color: var(--black);
 }
 
-.headerForGallery {
+/* .headerForGallery {
     background-color: var(--verydarkblue);
     border: 5px solid var(--lighterverydarkblue);
-}
+} */
 
 .subHeader {
     display: block;
@@ -411,32 +432,42 @@ h2 {
 }
 
 .containingDocsSection {
-    padding: 15px;
-    width: fit-content;
+    /* padding: 15px; */
+    text-align: center;
+
+}
+
+.docLinks {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 13px;
+    font-size: 17px;
+    letter-spacing: 0.75px;
 }
 
 .docHeader {
-    background-color: var(--verydarkblue);
+    /* background-color: var(--verydarkblue); */
     padding: 15px;
-    border: 5px solid var(--lighterverydarkblue)
-
+    
+    /* border: 5px solid var(--lighterverydarkblue) */
 }
 
 .docSection {
-    background-color: var(--verydarkblue);
+    /* background-color: var(--verydarkblue); */
     padding: 15px;
-    border: 5px solid var(--lighterverydarkblue)
+    /* border: 5px solid var(--lighterverydarkblue); */
 
 }
 
 .embedYTVideo {
     height: 450px;
-    width: 75%;
+    /* width: 75%; */
     margin: auto;
     display: block;
-    border: 7px solid var(--verydarkblue);
+    /* border: 7px solid var(--verydarkblue); */
     border-radius: 25px;
-    padding: 15px;
+    padding: 25px;
+    padding-lefT: 0;
 }
 
 .embedVMR {
@@ -472,8 +503,9 @@ h2 {
 }
 
 .paddingTutor {
-    padding-right: 6%;
-    padding-left: 6%;
+    padding: 15px;
+    /* padding-right: 6%;
+    padding-left: 6%; */
 }
 
 @media (min-width: 768px){
@@ -658,8 +690,8 @@ h2 {
     margin-top: 50px;
     height:fit-content;
     text-align: center; 
-    background-color: var(--verydarkblue);
-    border: 5px solid var(--lighterverydarkblue);
+    /* background-color: var(--verydarkblue);
+    border: 5px solid var(--lighterverydarkblue); */
 }
 
 .innerCopyright {
@@ -686,3 +718,106 @@ h2 {
         padding-top: 25px;
     }
 }
+
+/* Slideshow container */
+.slideshow-container {
+    display: block;
+    float: left;
+    padding-left: 15px;
+    padding-right: 7.5;
+    padding-bottom: 15px;
+    /* margin-left: 12.5%;
+    margin-right: 12.5%;
+    width: 75%; */
+    position: relative;
+  }
+  
+  /* Make the images invisible by default */
+  .slides {
+    display: none;
+  }
+  
+  /* forward & Back buttons */
+  .Back, .forward {
+    cursor: pointer;
+    position: absolute;
+    top: 48%;
+    width: auto;
+    margin-top: -23px;
+    padding: 17px;
+    color: grey;
+    font-weight: bold;
+    font-size: 19px;
+    transition: 0.4s ease;
+    border-radius: 0 5px 5px 0;
+    user-select: none;
+  }
+  
+  /* Place the "forward button" to the right */
+  .forward {
+    right: 0;
+    border-radius: 4px 0 0 4px;
+  }
+  
+  /*when the user hovers,add a black background with some little opacity */
+  .Back:hover, .forward:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption Info */
+  .Info {
+    color: #e3e3e3;
+    font-size: 16px;
+    padding: 10px 14px;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+  }
+
+  .dotsContainer {
+    text-align: center;
+    display: block;
+    float: left;
+    width: 100%;
+    position: relative;
+    bottom: 0;
+  }
+
+  /* The circles or bullets and indicators */
+  .dots {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    margin: 0 3px;
+    background-color: #acc;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.5s ease;
+  }
+  
+  .enable, .dots:hover {
+    background-color: #717161;
+  }
+  
+  /* Faint animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.4s;
+    animation-name: fade;
+    animation-duration: 1.4s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .5}
+    to {opacity: 2}
+  }
+  
+  @keyframes fade {
+    from {opacity: .5}
+    to {opacity: 2}
+  }
