--- a/css/home.css
+++ b/css/home.css
@@ -223,7 +223,6 @@ th:hover {
     height: 100%;
     max-height: 120px;
     width: 100%;
-
     object-fit: contain;
 }
 
@@ -236,14 +235,28 @@ th:hover {
 
 .homeLogoContainingDiv {
     width: 75%;
+    /* width: 100%; */
+    height: 100%;
+    max-height: 500px;
     margin: auto;
+    display: block;
+    float: left;
 }
 
 .homeLogo {
+    display: block;
     width: 100%;
     height: 100%;
+    max-height: 500px;
     padding-top: 30px;
     padding-bottom: 30px;
+    object-fit: cover;
+}
+
+@media only screen and (max-width: 576px) {
+    .homeLogoContainingDiv, .homeLogo {
+        display: none;
+    }
 }
 
 a {
