--- a/css/home.css
+++ b/css/home.css
@@ -463,7 +463,7 @@ th:hover {
 
 ---------------------------------------------*/
 
-.slideshow-container {
+#slideshow-container {
     display: block;
     float: left;
     padding-left: 15px;
@@ -488,7 +488,6 @@ th:hover {
     width: auto;
     margin-top: -23px;
     padding: 17px;
-    color: grey;
     font-weight: bold;
     font-size: 19px;
     transition: 0.4s ease;
@@ -504,7 +503,7 @@ th:hover {
   
   /*when the user hovers,add a black background with some little opacity */
   .Back:hover, .forward:hover {
-    background-color: rgba(0,0,0,0.8);
+    background-color: var(--verydarkblue);
   }
   
   /* Caption Info */
@@ -537,22 +536,22 @@ th:hover {
     height: 16px;
     width: 16px;
     margin: 0 3px;
-    background-color: #acc;
+    background-color: var(--lightblue);
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.5s ease;
   }
   
   .enable, .dots:hover {
-    background-color: #717161;
+    background-color: var(--verydarkblue);
   }
   
   /* Faint animation */
   .fade {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.4s;
+    -webkit-animation-duration: 0.75s;
     animation-name: fade;
-    animation-duration: 1.4s;
+    animation-duration: 0.75s;
   }
   
   @-webkit-keyframes fade {
@@ -865,9 +864,7 @@ th:hover {
     width:100%; 
     margin-top: 50px;
     height:fit-content;
-    text-align: center; 
-    /* background-color: var(--verydarkblue);
-    border: 5px solid var(--lighterverydarkblue); */
+    text-align: center;
 }
 
 .innerCopyright {
