--- a/css/home.css
+++ b/css/home.css
@@ -65,6 +65,12 @@ h2 {
     padding-right: 20px;
 }
 
+.downloadLinks, .featuresLinks, .docLinks {
+    padding: 15px;
+    display: block;
+    font-size: 25px;
+}
+
 @media only screen and (max-width: 768px) {
     h1 {
         font-size: 30px;
@@ -578,7 +584,7 @@ th:hover {
 
 /*------------------------------------------ 
 
-            FEATURES and DOWNLOAD
+                FEATURES
 
 ---------------------------------------------*/
 
@@ -590,12 +596,6 @@ th:hover {
     letter-spacing: 0.5px;
     display: block;
     float: left;
-}
-
-.downloadLinks, .featuresLinks, .docLinks {
-    padding: 15px;
-    display: block;
-    font-size: 25px;
 }
 
 /*------------------------------------------ 
@@ -622,8 +622,8 @@ th:hover {
     /* padding: 15px; */
     text-align: center;
 }
-/* 
-.docLinks {
+
+/* .docLinks {
     display: block;
     margin-top: 0;
     margin-bottom: 13px;
