--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,8 +3,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: white;
-  background-color: var(--black); }
+  color: var(--white);
+}
 
 /* line 12, /home/dave/software/ktbolt/simvascular.github.io/source/css/grayscale.scss */
 html {
@@ -57,7 +57,8 @@ a {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color: black; }
+  background-color: black; 
+}
   /* line 66, /home/dave/software/ktbolt/simvascular.github.io/source/css/grayscale.scss */
   .navbar-custom .navbar-brand {
     font-weight: 700; }
